Use proper help index naming as suggested by the following bug report.

BUG: 252860